2007-07-16  Paolo Maggi  <paolo@gnome.org>

	* gtksourceview/gtksourcemarker.[ch]: use const instead of 
	G_CONST_RETURN

2007-07-16  Paolo Maggi  <paolo@gnome.org>

	GtkSourceStyleManager API revisited
	
	* gtksourceview/gtksourcelanguagemanager.c
	(gtk_source_language_manager_get_default): silent a gcc warning
	(gtk_source_language_manager_set_search_path): code cleanup
	 (ensure_languages): use the new _gtk_source_view_get_file_list 
	signature
	
	* gtksourceview/gtksourcestylemanager.[ch]: almost rewritted to 
	use the updated API.

	* gtksourceview/gtksourceview-utils.[ch] (build_file_listing): added
	a only_dirs parameter
	
	(_gtk_source_view_get_file_list): ditto
	
	* tests/test-scheme.xml: test scheme 
	* tests/test-widget.c: print available style schemes at startup

2007-07-14  Steve Frécinaux  <code@istique.net>

	* gtksourceview/language-specs/perl.lang: fix special variable
	handling in patterns, and recognize // after an operator (bug 456702).

2007-07-13  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourcestylescheme.[ch]: add a filename
	property and the relative getter.

2007-07-13  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcecontextengine.c:
	Ignore styles in all child contexts when use-style="no" is used.
	DefinitionChild.override_style_deep, Context.ignore_children_style:
	new struct members;
	(context_new): new argument, ignore_children_style;
	Context.ignore_children_style is propagated from parent context if not
	set explicitely.
	(_gtk_source_context_data_finish_parse): do not require error
	argument to be non-NULL.

	* gtksourceview/gtksourceview/gtksourcelanguage-parser-1.c:
	(_gtk_source_language_file_parse_version1): call
	_gtk_source_context_data_finish_parse(), this unbreaks loading old lang
	files.

	* gtksourceview/language-specs/check.sh: use a list of version-1 files,
	and check the rest.

2007-07-13  Steve Frécinaux  <code@istique.net>

	* gtksourceview/language-specs/perl.lang: fix highlighting of