@@ -1,5 +1,12 @@
 2007-07-16  Paolo Maggi  <paolo@gnome.org>
 
+	* gtksourceview/gtksourcestylemanager.c
+	(gtk_source_style_manager_append_search_path),
+	(gtk_source_style_manager_prepend_search_path): fixed a problem when
+	the default path is used.
+
+2007-07-16  Paolo Maggi  <paolo@gnome.org>
+
 	* gtksourceview/gtksourcemarker.[ch]: use const instead of 
 	G_CONST_RETURN
 
